[gd_scene load_steps=2 format=3 uid="uid://btth28dyxsnur"]

[ext_resource type="Script" path="res://Calculator.gd" id="1_xwf3u"]

[node name="Calculator" type="Node2D"]
script = ExtResource("1_xwf3u")

[node name="BackgroundColorRect" type="ColorRect" parent="."]
offset_right = 720.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="ParentMarginContainer" type="MarginContainer" parent="."]
offset_right = 720.0
offset_bottom = 720.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VerticalContentContainer" type="VBoxContainer" parent="ParentMarginContainer"]
layout_mode = 2

[node name="Row1" type="HBoxContainer" parent="ParentMarginContainer/VerticalContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Clear" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row1"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "C"

[node name="Display" type="TextEdit" parent="ParentMarginContainer/VerticalContentContainer/Row1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
editable = false

[node name="Row2" type="HBoxContainer" parent="ParentMarginContainer/VerticalContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Seven" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "7"

[node name="Eight" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "8"

[node name="Nine" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "9"

[node name="Plus" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "+"

[node name="Row3" type="HBoxContainer" parent="ParentMarginContainer/VerticalContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Four" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "4"

[node name="Five" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "5"

[node name="Six" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "6"

[node name="Minus" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "-"

[node name="Row4" type="HBoxContainer" parent="ParentMarginContainer/VerticalContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="One" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "1"

[node name="Two" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "2"

[node name="Three" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "3"

[node name="Star" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "*"

[node name="Row5" type="HBoxContainer" parent="ParentMarginContainer/VerticalContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Zero" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "0"

[node name="Period" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "."

[node name="Equals" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "="

[node name="Slash" type="Button" parent="ParentMarginContainer/VerticalContentContainer/Row5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "/"

[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row1/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row2/Seven" to="." method="_on_seven_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row2/Eight" to="." method="_on_eight_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row2/Nine" to="." method="_on_nine_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row2/Plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row3/Four" to="." method="_on_four_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row3/Five" to="." method="_on_five_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row3/Six" to="." method="_on_six_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row3/Minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row4/One" to="." method="_on_one_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row4/Two" to="." method="_on_two_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row4/Three" to="." method="_on_three_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row4/Star" to="." method="_on_star_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row5/Zero" to="." method="_on_zero_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row5/Period" to="." method="_on_period_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row5/Equals" to="." method="_on_equals_pressed"]
[connection signal="pressed" from="ParentMarginContainer/VerticalContentContainer/Row5/Slash" to="." method="_on_slash_pressed"]
